--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,8 +77,8 @@ a:hover {
 }
 
 .activity-header h1 {
-  font-size: 2.2rem;
-  color: #5d4777;
+  font-size: 1.2rem !important;
+  color: #1E3D59;
   margin-bottom: 10px;
 }
 
